@@ -825,17 +825,17 @@ ptrdiff_t _Filebuf_base::_M_read(char* buf, ptrdiff_t n) {
   // charaters to the buffer, avoids extraction of too small chunk of datas
   // which would be counter performant.
   while (__STATIC_CAST(size_t, (n - readen)) >= chunkSize) {
-    DWORD NumberOfBytesRead;
-    ReadFile(_M_file_id, buf + readen, __STATIC_CAST(DWORD, chunkSize), &NumberOfBytesRead, 0);
+    DWORD numberOfBytesRead;
+    ReadFile(_M_file_id, buf + readen, __STATIC_CAST(DWORD, chunkSize), &numberOfBytesRead, 0);
 
-    if (NumberOfBytesRead == 0)
+    if (numberOfBytesRead == 0)
       break;
 
     if (!(_M_openmode & ios_base::binary)) {
       // translate CR-LFs to LFs in the buffer
       char *to = buf + readen;
       char *from = to;
-      char *last = from + NumberOfBytesRead - 1;
+      char *last = from + numberOfBytesRead - 1;
       for (; from <= last && *from != _STLP_CTRLZ; ++from) {
         if (*from != _STLP_CR)
           *to++ = *from;
@@ -877,13 +877,15 @@ ptrdiff_t _Filebuf_base::_M_read(char* buf, ptrdiff_t n) {
           }
         } // found CR
       } // for
+      readen = to - buf;
       // seek back to TEXT end of file if hit CTRL-Z
-      if (from <= last) // terminated due to CTRLZ
-        SetFilePointer(_M_file_id, (LONG)((last+1) - from), 0, SEEK_CUR);
-      readen += to - (buf + readen);
+      if (from <= last) { // terminated due to CTRLZ
+        SetFilePointer(_M_file_id, -(LONG)((last + 1) - from), 0, SEEK_CUR);
+        break;
+      }
     }
     else
-      readen += NumberOfBytesRead;
+      readen += numberOfBytesRead;
   }
   return readen;
 
