@@ -5,6 +5,9 @@
 	fix has been integrated. We now try to convert already read buffer
 	even if latest file read failed.
 
+	* src/fstream.cpp: Integrate trunk fix for management of Crtl-Z under
+	Windows.
+
 2008-01-11  Petr Ovtchenkov  <complement@users.sourceforge.net>
 
 	* src/num_put_float.cpp, stlport/stl/_cstdlib.h, stlport/stl/config/_hpux.h:
